--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.9",
     "npm": "^10.9.2",
     "socket.io": "^4.8.1"
